# rainfall-monitor-metnoAPI

./: .gitignore  Create map of rainfal predictions Malawi.ipynb  Dockerfile  Malawi_rainfall.tiff  README.md  env.yml.template  environment.yml  pyproject.toml  rainfall_per_catchment_area.py  requirements.txt  requirements_incl_GDAL.txt  setting.yml  settings-mwi.yml  settings-uga.yml  settings.yml  settings_v2.yml  utils.py
.github/workflows/: update_acr.yml
docs/: code_details.md  customisation.md  deployment.md
rainfall-monitor-metnoapi/: settings-civ.yml  settings-mwi.yml  settings-template.yml  utils.py
rainfall-monitor-metnoapi/shapefiles/CatchmentsShapefile/: ShireCatchments_prj.dbf  ShireCatchments_prj.shp
rainfall-monitor-metnoapi/shapefiles/CatchmentsShapefile_dissolved/: CatchmentsShapefile_dissolved.dbf  CatchmentsShapefile_dissolved.shp  CatchmentsShapefile_dissolved.shx
rainfall-monitor-metnoapi/shapefiles/grid/: grid_20km.shp  grid_20km.shx
shapefiles/: Malawi_API_calls_catchments_dissolved.geojson
shapefiles/CatchmentsShapefile/: ShireCatchments_prj.shx
shapefiles/grid/: grid_10km.dbf  grid_10km.shp  grid_10km.shx  grid_20km.dbf
src/: rainfall_forecast.py  settings-template.yml  utils.py
