[tool.poetry]
name = "rainfall-monitor-metnoapi"
version = "0.1.0"
description = "Visualise rainfall forecast as maps 3 days lead time"
authors = ["pphung"]
readme = "README.md"
packages = [{include = "rainfall-monitor-metnoapi"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
pyyaml = "^6.0.2"
click = "^8.1.7"
datetime = "^5.5"
metno-locationforecast = "^1.2.0"
rasterio = "^1.3.11"
rasterstats = "^0.19.0"
rioxarray = "^0.17.0"
xarray = "^2024.9.0"
azure-storage-blob = "^12.22.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
cmocean = "^4.0.3"
contextily = "^1.6.2"
tqdm = "^4.66.5"
geopandas = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
